[gd_scene load_steps=21 format=2]

[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bat.png" type="Texture" id=2]
[ext_resource path="res://hitboxes/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/bat.gd" type="Script" id=4]
[ext_resource path="res://stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/player_detection_area.tscn" type="PackedScene" id=6]
[ext_resource path="res://hitboxes/hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://hitboxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.12311

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.0
height = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 66.1211

[sub_resource type="CapsuleShape2D" id=10]
radius = 4.0
height = 6.0

[sub_resource type="CircleShape2D" id=11]
radius = 3.16228

[node name="bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 4 )

[node name="bat" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "fly"
playing = true
offset = Vector2( 0, -12 )

[node name="shadow" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="player_detection_area" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="player_detection_area" index="0"]
modulate = Color( 1, 1, 1, 0.145098 )
shape = SubResource( 9 )

[node name="hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -13 )

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( 0, 13 )
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="on_no_health" from="stats" to="." method="_on_stats_on_no_health"]

[editable path="hurtbox"]
[editable path="player_detection_area"]
[editable path="hitbox"]
[editable path="SoftCollision"]
